basic.html improved

--- a/templates/colorlib-search-25/starter.html
+++ b/templates/colorlib-search-25/starter.html
@@ -40,7 +40,7 @@
 
 
           <div class="input-field second-wrap">
-            <input name="search" id="search" aria-label="Search" type="text" placeholder="Enter Keywords" />
+            <input name="search" id="search" aria-label="Search" type="text" placeholder="Type To Search" />
           </div>
           <div class="input-field third-wrap">
             <button class="btn-search" type="submit">Search</button><br><br>
