--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -1,18 +1,147 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel = "icon" href = "https://icon2.cleanpng.com/20171220/hpe/shopping-cart-png-5a3a8fce7193f6.6430523815137873424652.jpg" type = "image/x-icon">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<html>
+<head>
+  <title></title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
 
-<title>{%block title%}{%endblock %}</title>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+
+
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g==" crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ti-icons@0.1.2/css/themify-icons.css">
+
+
+
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+
+
+
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
+
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+
+
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
+
+</head>
+<div class="wrapper">
+        <!-- Sidebar  -->
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Bootstrap Sidebar</h3>
+            </div>
+
+            <ul class="list-unstyled components">
+                <p>Dummy Heading</p>
+                <li class="active">
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                        <li>
+                            <a href="#">Home 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Home 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Home 3</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
+                    <ul class="collapse list-unstyled" id="pageSubmenu">
+                        <li>
+                            <a href="#">Page 1</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 2</a>
+                        </li>
+                        <li>
+                            <a href="#">Page 3</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- Page Content  -->
+        <div id="content">
+
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+
+                    <button type="button" id="sidebarCollapse" class="btn btn-dark">
+                        <i class="fas fa-align-left"></i>
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+<div class="text-left">
+      <form class="d-flex" method="get" action="/shop/search">
+        <input class="form-control" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
+        <button class="btn btn-outline-success mx-2" id="search_button" type="submit">Search</button>
+      </form>
+</div>
+
+<style>
+.d-flex{
+  margin-bottom:0px;
+  width: 500px;
+}
+@media (max-width: 768px) {
+.d-flex{
+  margin-right: -15px;
+  margin-bottom:0px;
+  width: 280px;
+}
+}
+</style>
+
+
+
+                </div>
+            </nav>
+
+{% block body %}{% endblock %}
 <style>{% block css %}{% endblock %}</style>
+
+
+
+
+
+        </div>
+    </div>
+
+
 
 
 <style>
@@ -24,330 +153,175 @@
     border-radius: 20px;
     background-color: #909596;
 }
-#cart{
-  position: relative;
-  left:15px;
+/*
+    DEMO STYLE
+*/
+
+@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+body {
+    font-family: 'Poppins', sans-serif;
+    background: #fafafa;
 }
-.nav-link{
-  position: relative;
-  left: 10px;
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
 }
-</style>
 
-
-
-  </head>
-  <body>
-
-<style>
-@media(min-width: 768px){
-#bar{
-  margin-left:15px;
+a,
+a:hover,
+a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
 }
-#search{
-  width:320px;
-}
-}
-@media(max-width: 768px){
-#bar{
-  margin-left:10px;
-}
-#search{
-  width:180px;
-}
-#navbar-brand{
-  display: none;
-}
-}
-</style>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
-    <a class="navbar-brand mx-2" href="/shop" id="navbar-brand" style="font-size:22px">My Awesome Cart</a><form class="d-flex" id="bar" method="get" action="/shop/search">
-        <input class="form-control me-2" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
-        <button class="btn btn-outline-success" id="search_button" type="submit">Search</button>
-      </form>
-
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-
-
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop">Home</a>
-      </li>
-
-
-{% if user.is_authenticated %}
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop/contact">Contact Us</a>
-      </li>
-{% else %}
-<style>
-#button {     
-    background-color: Transparent;
-    background-repeat:no-repeat;
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
-    color: white;       
+    border-radius: 0;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
 }
-</style>
 
-<li class="nav-item active">
-<button class="nav-link active" type="button" data-toggle="modal" data-target="#contact" id="button">
-  Contact Us
-</button>
-</li>
-
-<div class="modal fade" id="contact" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You can't Contact Us</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        for Contacting us,you have to login first:-
-      </div>
-      <div class="modal-footer">
-        <a  href="/" class="btn btn-secondary" >Signup/Login</a>
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
-
-
-
-
-
-
-
-
-
-{% if user.is_authenticated %}
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop/cart">My Cart {{cart_count}}</a>
-      </li>
-{% else %}
-<style>
-#button {     
-    background-color: Transparent;
-    background-repeat:no-repeat;
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
     border: none;
-    cursor:pointer;
-    overflow: hidden; 
-    color: white;       
 }
-</style>
 
-<li class="nav-item active">
-<button class="nav-link active" type="button" data-toggle="modal" data-target="#AddToCart" id="button">
-  Add To Cart
-</button>
-</li>
-
-<div class="modal fade" id="AddToCart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You can't Go To Cart</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        for Seeing,your Add To Cart Button You Have To Login First:-
-      </div>
-      <div class="modal-footer">
-        <a  href="/" class="btn btn-secondary" >Signup/Login</a>
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
-
-
-
-
-
-
-
-
-
-{% if user.is_authenticated %}
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop/vieworder">My orders</a>
-      </li>
-{% else %}
-<style>
-#button {     
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden; 
-    color: white;       
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
 }
-</style>
 
-<li class="nav-item active">
-<button class="nav-link active" type="button" data-toggle="modal" data-target="#order" id="button">
-  My order
-</button>
-</li>
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
 
-<div class="modal fade" id="order" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You can't See Your Order</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        for seeing Your Order, you have to login first:-
-      </div>
-      <div class="modal-footer">
-        <a href="/" class="btn btn-secondary" >Signup/Login</a>
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
-
-
-
-
-
-
-
-
-
-
-
-
-{% if user.is_authenticated %}
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop/sellproduct" data-target="#exampleModal">Sell Your Products</a>
-    </li>
-
-{% else %}
-<style>
-#product_button {     
-    background-color: Transparent;
-    background-repeat:no-repeat;
-    border: none;
-    cursor:pointer;
-    overflow: hidden; 
-    color: white;       
+.wrapper {
+    display: flex;
+    width: 100%;
+    align-items: stretch;
 }
-@media(min-width: 780px){
-  .btn{
+
+#sidebar {
+    min-width: 250px;
+    max-width: 250px;
+    background: black;
+    color: #fff;
+    transition: all 0.3s;
+}
+
+#sidebar.active {
+    margin-left: -250px;
+}
+
+#sidebar .sidebar-header {
+    padding: 20px;
+    background: black;
+}
+
+#sidebar ul.components {
+    padding: 0px 0;
+    border-bottom: 1px solid #47748b;
+}
+
+#sidebar ul p {
+    color: #fff;
+    padding: 10px;
+}
+
+#sidebar ul li a {
+    padding: 10px;
+    font-size: 1.1em;
+    display: block;
+}
+
+#sidebar ul li a:hover {
+    color: #7386D5;
+    background: black;
+}
+
+#sidebar ul li.active>a,
+a[aria-expanded="true"] {
+    color: #fff;
+    background: black;
+}
+
+a[data-toggle="collapse"] {
     position: relative;
-    top:0px;
-  }
+}
+
+.dropdown-toggle::after {
+    display: block;
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    transform: translateY(-50%);
+}
+
+ul ul a {
+    font-size: 0.9em !important;
+    padding-left: 30px !important;
+    background: black;
+}
+
+ul.CTAs {
+    padding: 20px;
+}
+
+ul.CTAs a {
+    text-align: center;
+    font-size: 0.9em !important;
+    display: block;
+    border-radius: 5px;
+    margin-bottom: 5px;
+}
+
+a.article,
+a.article:hover {
+    background: #6d7fcc !important;
+    color: #fff !important;
+}
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+
+#content {
+    width: 100%;
+    padding: 0px;
+    min-height: 100vh;
+    transition: all 0.3s;
+}
+
+/* ---------------------------------------------------
+    MEDIAQUERIES
+----------------------------------------------------- */
+
+@media (max-width: 768px) {
+    #sidebar {
+        margin-left: -250px;
+    }
+    #sidebar.active {
+        margin-left: 0;
+    }
 }
 </style>
 
-<li class="nav-item active">
-<button class="nav-link" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" id="product_button">
-  Sell Your Product
-</button>
-</li>
-
-
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You can't Sell Product</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        For selling product You have to login first:-
-      </div>
-      <div class="modal-footer">
-        <a href="/"><button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Login/Signup</button></a>
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
-
-
-
-
-
-<li class="nav-item dropdown">
-  <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    MORE
-  </a>
-
-<style>
-#droplist{
-    background-color:#CECECE;
-}
-.dropdown-item:hover{
-  background-color: #EAE8E6;
-}
-#navbarDropdown{
-  position:relative;
-  left:2px;
-}
-</style>
-<ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="droplist">
-  <li><a class="dropdown-item" href="/shop/view"><p style="color:black;"><b>All Products</b></p></a></li>
-  <li><a class="dropdown-item" href="/shop/about"><p style="color:black;"><b>About Us</b></p></a></li>
-</ul>
-</li>
-
-
-{% if user.is_authenticated %}
-<li class="nav-item dropdown">
-  <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-    <b>{{request.user.username}}</b>
-  </a>
-
-
-<ul class="dropdown-menu" aria-labelledby="navbarDropdown" id="droplist">
-  <li><a class="dropdown-item" href="/shop/orderrequest"><p style="color:black;"><b>My Profile</b></p></a></li>
-  <li><a class="dropdown-item" href="/shop/yourproduct"><p style="color:black;"><b>Switch To Seller</b></p></a></li>
-  <li><a class="dropdown-item" href="/signout"><p style="color:black;"><b>Logout</b></p></a></li>
-  {% if request.user.id == 21 or request.user.id == 1 %}
-  <li><a class="dropdown-item" href="/admin"><p style="color:black;"><b>Admin Panel</b></p></a></li>
-  </ul>
-  {% endif %}
-{% else %}
-<a href="/"><button class="btn btn-danger">Login/signup</button></a>
-{% endif %}
-
-
-
-</ul>
-</li>
-
-
-</nav>
-{% block body %}
-{% endblock %}
-
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-  </body>
+<script>
+$(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                $('#sidebar').toggleClass('active');
+            });
+        });
+</script>
+</body>
 </html>
+    
