--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -176,7 +176,7 @@ margin: 10px 10px 10px 10px;
                   <button type="button" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#myModal{{product.id}}">Add to Cart</button>
 
                 </div>
-                <small class="text-muted" style="font-size:18px;">Price:-₹{{product.price}}</small>
+                <small class="text-muted" style="font-size:18px;margin-left:-1100px;">Price:-₹{{product.price}}</small>
               </div>
             </div>
           </div>
@@ -218,8 +218,6 @@ margin: 10px 10px 10px 10px;
         </div>
 
 </form>
-{% else %}
-<center><p>You have Not Signup/Login</p></center>
 {% endif %}
 
 </div>
