--- a/templates/shop/view.html
+++ b/templates/shop/view.html
@@ -110,7 +110,9 @@ width: 200px;
         {% endif %}
 
         {% if data.has_next %}
+        <div class="container">
           <a href="/shop/view/?page={{ data.next_page_number }}"><button class="btn btn-secondary" id="butt">next&raquo;</button></a>
+        </div>
         {% endif %}
 
 <br>
