improved ui of website

--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -38,7 +38,13 @@
 
     <button class="btn btn-dark" type="submit">Submit</button>
 {% else %}
-<center><h3>you have not signup please go and sign up the page</h3>
-  <a href="/"><button class="btn btn-danger">Sign In/Sign Up</button></a></center.
+
+<center>
+<h3>you have not signup please go and sign up the page</h3>
+<a href="/">
+  <button class="btn btn-danger">Sign In/Sign Up</button>
+</a>
+</center>
+
 {% endif %}
 {%endblock%}
