--- a/templates/shop/edit.html
+++ b/templates/shop/edit.html
@@ -1,5 +1,6 @@
-{% extends 'shop/basic.html' %}
+{% extends 'shop/seller.html' %}
 {% block body %}
+<br>
     <form method="POST" action="update/{{product.id }}">
         {% csrf_token %}
         <div class="container">
