--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -77,8 +77,7 @@
         <li data-target="#main-carousel" data-slide-to="1"></li>
         <li data-target="#main-carousel" data-slide-to="2"></li>
         <li data-target="#main-carousel" data-slide-to="3"></li>
-      </ol>
-      
+      </ol>     
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img class="d-block img-fluid" src="https://static.vecteezy.com/system/resources/previews/002/459/314/non_2x/shopping-online-store-for-sale-mobile-ecommerce-3d-blue-background-shop-online-on-mobile-app-24-hours-shopping-cart-credit-card-minimal-store-online-device-3d-rendered-free-vector.jpg" alt="">
@@ -158,32 +157,88 @@ margin: 10px 10px 10px 10px;
     <hr id="hori"></hr>
 
 
-  <div class="album py-1 bg-light">
-    <div class="cont mx-3">
-      <div class="row row-cols-1 row-cols-sm-7 row-cols-md-3 g-3">
-        
-        {%for product in prod %}
-        <div class="col">
-          <div class="card shadow-sm">
 
-            <div class="card-body">
-              <img src="/media/{{product.image}}" width="100%">
-              <p class="card-text" style="font-size:25px;">{{product.product_name}}</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a href="/shop/productview/{{product.id}}"><button id="button-font-size" type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
 
-                  <button type="button" id="button-font-size" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#myModal{{product.id}}">Add to Cart</button>
+<!-- <div class="card" style="width: 18rem;">
+  <img class="card-img-top" src="/media/{{product.image}}" width="100%" alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{product.product_name}}</h5>
+    <p class="card-text">{{product.description}}</p>
+    <a href="#" class="btn btn-primary">Price:-₹{{product.price}}</a>
+    <button type="button" id="button-font-size" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#myModal{{product.id}}">Add to Cart</button>
+  </div>
+</div> -->
 
-                </div>
-              </div>
-            </div>
-            <p class="container mx-1" id="text-font-size"><b>Price:-₹{{product.price}}</b></p>
-          </div>
-        </div>
+
+
 
 <style>
-@media (min-width: 275px) {
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+/* Responsive columns - one column layout (vertical) on small screens */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+</style>
+
+
+
+<div class="row mx-4">
+
+{%for product in prod %}
+  <div class="column my-3">
+    <img src="/media/{{product.image}}" width="100%" height="300px">
+    
+    <div class="card">{{product.product_name}}
+    <br>
+
+<div>
+
+    <a href="/shop/productview/{{product.id}}"><button id="button-font-size" type="button" class="btn btn-sm btn-outline-secondary">View</button></a>
+
+    <button type="button" id="button-font-size" class="btn btn-sm btn-outline-secondary" data-toggle="modal" data-target="#myModal{{product.id}}">Add to Cart</button>
+
+</div>
+
+    </div>
+  </div>
+<style>
+@media (max-width: 285px) {
 #text-font-size{
   font-size: 15px;
   margin-top: 0px;
@@ -238,10 +293,7 @@ margin: 10px 10px 10px 10px;
 
 {% endfor %}
 </div>
-</div>
-</div>
-
-
 {% endfor %}
-
+<br>
+<br>
 {% endblock %} 
