--- a/templates/shop/orderrequest.html
+++ b/templates/shop/orderrequest.html
@@ -1,4 +1,4 @@
-{% extends 'shop/basic.html' %}
+{% extends 'shop/seller.html' %}
 {% block title %}Order Request{% endblock %}
 {%block body%}
 
@@ -48,8 +48,8 @@
 
 
 {%else%}
-<h2>Please sign in to see your Orders Request</h2>
-<a href="/" class="btn btn-danger">Sign in Here</a>
+<center><h2>Please sign in to see your Orders Request</h2>
+<a href="/" class="btn btn-danger">Sign in Here</a></center>
 {%endif%}
 
 
