--- a/templates/shop/seller.html
+++ b/templates/shop/seller.html
@@ -357,25 +357,22 @@ html { height: 100%;}
         <p style="color:white">My Awesome Cart</p></div></div>
 
 
-       <li><a href="/shop"><i class="fa fa-home" style="color:white;width:20px;height:20px;"></i>Home</a></li>
+       <li><a href="/shop/dashboard"><i class="fa fa-home" style="color:white;width:20px;height:20px;"></i>Dashboard</a></li>
 
 
-       <li><a href="/shop/about"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i> About Us</a></li>
+       <li><a href="/shop/orderrequest"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i>Order request</a></li>
 
-       <li><a href="/shop/contact"><i class="fas fa-paper-plane"></i>Contact Us</a></li>
-
-
-       <li><a href="/shop/cart"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>My cart</a></li>
-
-       <li><a href="/shop/vieworder"><i class='fas fa-shipping-fast'></i> My Order</a></li>
+       <li><a href="/shop/orderrequest"><i class="fas fa-paper-plane"></i>Contact us</a></li>
 
 
-       <li><a href="/shop/view"><i class="fa fa-product-hunt " style="color:white;width:20px;height:20px;"></i>All Products</a></li>
+       <li><a href="/shop/sellproduct"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>Sell Your Product</a></li>
+
+
+       <li><a href="/shop/yourproduct"><i class="fa fa-product-hunt " style="color:white;width:20px;height:20px;"></i>My Products</a></li>
 
 
     
-      <li><a href="/shop/dashboard"><i class="fa fa-exchange"></i> Switch To Seller Mode</a></li>
-
+      <li><a href="/shop"><i class="fa fa-exchange"></i> Switch To Buyer Mode</a></li>
 
       <div id="signout"><li><h5><a href="/signout">Sign Out <i class="fa fa-sign-out"></i></a></h5></li></div>
       </ul>
@@ -392,6 +389,7 @@ html { height: 100%;}
   position: fixed;
   top: -1%;
   width: 100%;
+  padding-top: 70px;
   z-index: 999;
 }
 #signout{
@@ -411,10 +409,6 @@ html { height: 100%;}
 
 
 
-                <form class="d-flex" method="get" action="/shop/search">
-                  <input class="form-control" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
-                  <button class="btn btn-outline-success mx-2" id="search_button" type="submit">Search</button>
-                </form>
                     </ul>
                 </div>
             </div>
@@ -424,60 +418,7 @@ html { height: 100%;}
 <br>
 
 
-<style>
-.d-flex{
-  margin-bottom:10px;
-  width:90%;
-  margin-left:120px;
-  margin-top: 10px;
-  padding-top: 8px;
-}
-@media (max-width: 770px) {
-#text-head{
-  display: none;
-}
-#search{
-  width: 40%;
-}
-.d-flex{
-  margin-bottom:10px;
-  width:80%;
-  margin-left:55px;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-}
-@media (max-width: 445px) {
-#text-head{
-  display: none;
-}
-#search{
-  width: 100%;
-}
-.d-flex{
-  margin-bottom:10px;
-  width:80%;
-  margin-left:55px;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-}
-@media (max-width: 286px) {
-.d-flex{
-  margin-bottom:10px;
-  width:76%;
-  margin-left:55px;
-  margin-top: 10px;
-  padding-top: 10px;
-}
-#text-head{
-  display: none;
-}
-#search{
-  width: 1000%;
-}
-}
-</style>
+
 
 
 
