--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -1,4 +1,4 @@
-{% extends 'shop/basic.html' %}
+{% extends 'shop/seller.html' %}
 {% block title %} sell your product {% endblock %}
 
 {% block body %}
@@ -25,7 +25,7 @@
 }
 }
 </style>
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+<!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="https://www.doersempire.com/wp-content/uploads/2019/07/How-to-sell-online-Ways-to-sell-products-online-1280x640.jpg" class="d-block w-100" alt="...">
@@ -45,7 +45,85 @@
     <span class="carousel-control-next-icon" aria-hidden="true"></span>
     <span class="visually-hidden">Next</span>
   </button>
-</div>
+</div> -->
+
+<style>
+.d-block{
+    width:100%;
+    height:530px;
+}
+#img{
+    margin-bottom: 100px;
+    width: 280px;
+    height: 300px;
+}
+#hori{
+  border-top: 3px solid black;
+  width: 100%;  
+}
+#horii{
+  border-top: 3px solid grey;
+  width: 100%;  
+}
+@media (max-width: 767px){
+#img{
+    width: 150px;
+    height: 160px;
+}
+.mt-0{
+    font-size:20px;
+}
+.card-title{
+    font-size:15px;
+}
+#des{
+    font-size:13px;
+}
+.d-block{
+    width:700px;
+    height:180px;
+
+}
+}
+</style>
+
+
+
+  <div class="cont">
+    <div class="carousel slide" id="main-carousel" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
+        <li data-target="#main-carousel" data-slide-to="1"></li>
+        <li data-target="#main-carousel" data-slide-to="2"></li>
+        <li data-target="#main-carousel" data-slide-to="3"></li>
+      </ol>     
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block img-fluid" src="https://static.vecteezy.com/system/resources/previews/002/459/314/non_2x/shopping-online-store-for-sale-mobile-ecommerce-3d-blue-background-shop-online-on-mobile-app-24-hours-shopping-cart-credit-card-minimal-store-online-device-3d-rendered-free-vector.jpg" alt="">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="https://ak.picdn.net/shutterstock/videos/2896216/thumb/7.jpg" alt="">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block img-fluid" src="https://www.digitaldealer.com/wp-content/uploads/2017/11/Screen-Shot-2017-11-03-at-8.18.36-AM.png" alt="">
+          <div class="carousel-caption d-none d-md-block">
+          </div>
+        </div>
+      
+      <a href="#main-carousel" class="carousel-control-prev" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </a>
+      <a href="#main-carousel" class="carousel-control-next" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </a>
+    </div>
+  </div>
+
+
 
 
 
