ui improved for android version

--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -395,12 +395,12 @@ html { height: 100%;}
   z-index: 999;
 }
 #signout{
-    padding-top: 190px;
+    padding-top: 150px;
 }
 </style>
 <div id="navbarr">
   <nav class="navbarr navbar-expand-lg navbar-light" id="mainNav">
-            <div class="container mx-4">
+            <div class="container mx-2">
 
 
 <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
@@ -410,8 +410,7 @@ html { height: 100%;}
 </button>
 
 
-
-                <form class="d-flex" method="get" action="/shop/search">
+                <form class="d-flex" method="get" action="/shop/search" id="kk">
                   <input class="form-control" type="search" placeholder="Search Product Here" name="search" id="search" aria-label="Search">
                   <button class="btn btn-outline-success mx-2" id="search_button" type="submit">Search</button>
                 </form>
@@ -474,7 +473,7 @@ html { height: 100%;}
   display: none;
 }
 #search{
-  width: 1000%;
+  width: 100%;
 }
 }
 </style>
