--- a/templates/shop/dashboard.html
+++ b/templates/shop/dashboard.html
@@ -87,7 +87,7 @@ body {
 <div class="row mx-4">
 {%for product in product %}
   <div class="column my-3">
-    <img src="/media/{{product.image}}" width="100%" height="300px">
+    <img src="/media/{{product.image}}" width="100%">
     
     <div class="card"><h5>{{product.product_name}}</h5>
 
