--- a/templates/shop/yourproduct.html
+++ b/templates/shop/yourproduct.html
@@ -34,7 +34,7 @@ h3,h4{
     <h3 class="mt-0"><b>Product name:-</b>{{product.product_name}}</h3>
     <h4><b>Product price:-</b>${{product.price}}</h4>
     <h4><b>Product Category:-</b>{{product.category}}</h4>
-    <a href="/shop/productview/{{product.id}}"><button class="btn btn-primary">visit product</button></a>
+    <a href="/shop/productview/{{product.id}}"><button class="btn btn-primary my-1">visit product</button></a>
     <a href="/shop/edit/{{product.id}}"><button class="btn btn-success">Edit</button></a>
   </div>
 </div>
