--- a/templates/shop/sellproduct.html
+++ b/templates/shop/sellproduct.html
@@ -25,27 +25,6 @@
 }
 }
 </style>
-<!-- <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="https://www.doersempire.com/wp-content/uploads/2019/07/How-to-sell-online-Ways-to-sell-products-online-1280x640.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://www.j2store.org/media/k2/items/cache/6b2d733e62f961aa8f8d2da1c77df197_XL.jpg" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item">
-      <img src="https://productmanagementfestival.com/wp-content/uploads/2017/01/sell-your-product-online.jpg" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div> -->
 
 <style>
 .d-block{
@@ -95,21 +74,20 @@
         <li data-target="#main-carousel" data-slide-to="0" class="active"></li>
         <li data-target="#main-carousel" data-slide-to="1"></li>
         <li data-target="#main-carousel" data-slide-to="2"></li>
-        <li data-target="#main-carousel" data-slide-to="3"></li>
       </ol>     
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block img-fluid" src="https://static.vecteezy.com/system/resources/previews/002/459/314/non_2x/shopping-online-store-for-sale-mobile-ecommerce-3d-blue-background-shop-online-on-mobile-app-24-hours-shopping-cart-credit-card-minimal-store-online-device-3d-rendered-free-vector.jpg" alt="">
+          <img class="d-block img-fluid" src="https://www.doersempire.com/wp-content/uploads/2019/07/How-to-sell-online-Ways-to-sell-products-online-1280x640.jpg" alt="">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="https://ak.picdn.net/shutterstock/videos/2896216/thumb/7.jpg" alt="">
+          <img class="d-block img-fluid" src="https://www.j2store.org/media/k2/items/cache/6b2d733e62f961aa8f8d2da1c77df197_XL.jpg" alt="">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block img-fluid" src="https://www.digitaldealer.com/wp-content/uploads/2017/11/Screen-Shot-2017-11-03-at-8.18.36-AM.png" alt="">
+          <img class="d-block img-fluid" src="https://productmanagementfestival.com/wp-content/uploads/2017/01/sell-your-product-online.jpg" alt="">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
@@ -127,10 +105,14 @@
 
 
 
+<div class="container mx-2">
+<br>
+<h2><u>Enter Your Product Details Below</u></h2>
+<br>
+</div>
 
-<h4><u>Enter Your Product Details Below</u></h4>
 
-<b><div class="container mt-5">
+<b><div class="container mx-2">
     <form  action="{% url 'sellproduct' %}" method="POST" enctype="multipart/form-data">{% csrf_token %}
 
 
