--- a/templates/shop/seller.html
+++ b/templates/shop/seller.html
@@ -11,6 +11,9 @@
 <meta name="apple-mobile-web-app-title" content="CodePen">
 
 
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
 <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
 
 
@@ -362,7 +365,7 @@ html { height: 100%;}
 
        <li><a href="/shop/orderrequest"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i>Order request</a></li>
 
-       <li><a href="/shop/orderrequest"><i class="fas fa-paper-plane"></i>Contact us</a></li>
+       <li><a href="/shop/seller/contactus"><i class="fas fa-address-book"></i> contact us</a></li>
 
 
        <li><a href="/shop/sellproduct"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>Sell Your Product</a></li>
@@ -416,7 +419,6 @@ html { height: 100%;}
 </div>
 <br>
 <br>
-
 
 
 
