improved ui of website

--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -365,7 +365,7 @@ html { height: 100%;}
 
        <li><a href="/shop/about"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i> About Us</a></li>
 
-       <li><a href="/shop/contact"><i class="fas fa-address-book"></i> Contact Us</a></li>
+       <li><a href="/shop/contact"><i class='fas fa-blender-phone'></i> Contact Us</a></li>
 
 
        <li><a href="/shop/cart"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>My cart</a></li>
@@ -397,7 +397,7 @@ html { height: 100%;}
     z-index: 999;
   }
   #signout{
-      padding-top: 190px;
+      padding-top: 140px;
   }
   </style>
   <div id="navbarr">
@@ -405,7 +405,7 @@ html { height: 100%;}
               <div class="container mx-4">
 
 
-  <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
+  <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas" id="jj">
       <span class="hamb-top"></span>
       <span class="hamb-middle"></span>
       <span class="hamb-bottom"></span>
@@ -431,6 +431,7 @@ html { height: 100%;}
   margin-bottom:10px;
   width:90%;
   margin-left:120px;
+  padding-right: 5.5px;
   margin-top: 10px;
   padding-top: 8px;
 }
