--- a/templates/shop/seller.html
+++ b/templates/shop/seller.html
@@ -11,6 +11,9 @@
 <meta name="apple-mobile-web-app-title" content="CodePen">
 
 
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
+
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 
@@ -365,7 +368,7 @@ html { height: 100%;}
 
        <li><a href="/shop/orderrequest"><i class="fa fa-address-card-o" style="color:white;width:20px;height:20px;"></i>Order request</a></li>
 
-       <li><a href="/shop/seller/contactus"><i class="fas fa-address-book"></i> contact us</a></li>
+       <li><a href="/shop/seller/contactus"><i class="fas fa-blender-phone"></i> contact us</a></li>
 
 
        <li><a href="/shop/sellproduct"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>Sell Your Product</a></li>
@@ -396,7 +399,7 @@ html { height: 100%;}
   z-index: 999;
 }
 #signout{
-    padding-top: 190px;
+    padding-top: 140px;
 }
 </style>
 <div id="navbarr">
