improved ui of website

--- a/templates/shop/basic.html
+++ b/templates/shop/basic.html
@@ -370,7 +370,7 @@ html { height: 100%;}
 
        <li><a href="/shop/cart"><i class="fa fa-shopping-cart" style="color:white;width:20px;height:20px;"></i>My cart</a></li>
 
-       <li><a href="/shop/vieworder"><i class='fas fa-shipping-fast'></i> My Order</a></li>
+       <li><a href="/shop/vieworder"><i class="material-icons" style="font-size:18px;">notifications_active</i> My Orders</a></li>
 
 
        <li><a href="/shop/view"><i class="fa fa-product-hunt " style="color:white;width:20px;height:20px;"></i>All Products</a></li>
