--- a/templates/shop/order1.html
+++ b/templates/shop/order1.html
@@ -57,7 +57,7 @@ width:60%;
     <div class="col-md-4">
     <div class="row-md-8">
         <br>
-        <label for="image"><img src="/media/{{product.image}}" width="287px" height="300px"></label>
+        <label for="image"><img src="/{{product.image}}" width="287px" height="300px"></label>
         <input type="hidden" id="image"readonly="readonly" class="form-control" value="{{product.image}}" name="product_image">
     </div>
 
