--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -34,7 +34,7 @@ h4,h5,a{
 
 <br>
 <div class="d-flex position-relative">
-  <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
+  <img src="/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
     <h4 class="mt-0">Product Name:-<b><u>{{order.product_name}}</u></b></h4>
     <h5>Price:-<b><u>{{order.product_price}}</u></b></h6>
