--- a/templates/shop/search.html
+++ b/templates/shop/search.html
@@ -49,7 +49,7 @@
 <br>
 
     <div class="d-flex position-relative mx-1">
-  <a href="/shop/productview/{{product.id}}"><img src="/media/{{product.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
+  <a href="/shop/productview/{{product.id}}"><img src="/{{product.image}}" class="flex-shrink-0 me-3" alt="..." id="img"></a>
   <div>
     <a href="/shop/productview/{{product.id}}"><h3 class="mt-0" style="margin-left:20px;">{{product.product_name}}</h3></a>
     <h5 class="card-title" style="margin-left:20px;">Price:-₹{{product.price}}</h5>
