--- a/templates/colorlib-search-25/starter.html
+++ b/templates/colorlib-search-25/starter.html
@@ -22,10 +22,10 @@
            <div class="input-field first-wrap">
             <div class="input-select">
               <select data-trigger="" name="choices-single-default" onchange="javascript:handleSelect(this)">
-                <option placeholder="">Search By Category</option>
+                <!-- <option placeholder="">Search By Category</option>
                 <option value="/shop">Mens</option>
                 <option value="/shop">Sports</option>
-                <option value="/shop">Kids</option>
+                <option value="/shop">Kids</option> -->
               </select>
             </div>
           </div>
