--- a/templates/shop/success2.html
+++ b/templates/shop/success2.html
@@ -14,7 +14,7 @@
 
 
  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
-  <a class="navbar-brand" href="/shop" id="cart">&nbsp;My Awesome Cart</a>
+  <a class="navbar-brand" href="/shop/dashboard" id="cart">&nbsp;My Awesome Cart</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,7 +26,7 @@
 
 
       <li class="nav-item active">
-        <a class="nav-link active" href="/shop">Home</a>
+        <a class="nav-link active" href="/shop/dashboard">Home</a>
       </li>
     </div>
 
