--- a/templates/shop/contact.html
+++ b/templates/shop/contact.html
@@ -36,9 +36,15 @@
   </div>
 
 
+  <div class="form-group">
+    <input value="{{contact_id}}" type="hidden" readonly="readonly" class="form-control" name="contact_id"></input>
+  </div>
 
 
     <button class="btn btn-dark" type="submit">Submit</button>
+    <br>
+    <br>
+  </form>
 {% else %}
 
 <center>
