--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -222,7 +222,7 @@ body {
 
 {%for product in prod %}
   <div class="column my-3">
-    <img src="/{{product.image}}" width="100%">
+    <img src="/media/{{product.image}}" width="100%">
     
     <div class="card">{{product.product_name}}
     <br>
