--- a/templates/shop/order1.html
+++ b/templates/shop/order1.html
@@ -57,7 +57,7 @@ width:60%;
     <div class="col-md-4">
     <div class="row-md-8">
         <br>
-        <label for="image"><img src="/{{product.image}}" width="287px" height="300px"></label>
+        <label for="image"><img src="/media/{{product.image}}" width="287px" height="300px"></label>
         <input type="hidden" id="image"readonly="readonly" class="form-control" value="{{product.image}}" name="product_image">
     </div>
 
@@ -169,6 +169,12 @@ width:60%;
             <div class="form-group col-md-7">
                 <input type="hidden" id="inputorder" class="form-control" value="{{product.admin_id}}" readonly="readonly" name="admin_id">
             </div>
+
+
+            <div class="form-group col-md-7">
+                <input class="form-control" type="hidden" value="{{order_id}}" readonly="readonly" name="order_id">
+            </div>
+
 
 
 
