--- a/templates/shop/prodview.html
+++ b/templates/shop/prodview.html
@@ -30,7 +30,7 @@
 
 <div class="row g-0 bg-light position-relative">
   <div class="col-md-2 mb-md-0 p-md-3">
-    <img src="/{{product.image}}" class="w-100" alt="...">
+    <img src="/media/{{product.image}}" class="w-100" alt="...">
 
     <a href="/shop/order/{{product.id}}" class="btn btn-dark mx-3" id="butt" style="margin-left:20px;"data-toggle="modal" data-target="#myModall{{product.id}}">Buy Now</a>
 
