--- a/templates/shop/seller_contactus.html
+++ b/templates/shop/seller_contactus.html
@@ -6,7 +6,7 @@
 <br>
  <div class="container">
      <h2><u>Contact Us</u></h2><br>
-<form action="/shop/contact/" method="post">{% csrf_token %}
+<form action="/shop/seller/contactus/" method="post">{% csrf_token %}
   <div class="form-group">
 
 
@@ -33,6 +33,11 @@
    <div class="form-group">
     <label for="desc">How May We Help You ?</label>
     <textarea class="form-control" id="des" name="des" rows="3"></textarea><br></b>
+  </div>
+
+
+   <div class="form-group">
+    <input value="{{contact_id}}" type="hidden" readonly="readonly" class="form-control" name="contact_id"></input>
   </div>
 
 
