--- a/templates/shop/success.html
+++ b/templates/shop/success.html
@@ -8,7 +8,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <title>Successfully Delivered</title>
+  <title>Successfully {{main_context}}</title>
 </head>
 <body>
 
@@ -57,8 +57,9 @@ body{
 }
 </style>
 
+
  <img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" alt="Nature" class="responsive" id="center"/>
-<center><h1>Your Have Successfully Ordered The Product</h1><h4>Thank You! For Purchasing</h4></center>
+<center><h1>{{line_context}}</h1><h4>{{last_context}}</h4></center>
 
 </body>
 
