--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -1,34 +1,10 @@
+{% extends 'shop/basic.html' %}
+{% block body %}
 {% load static %}
-<html>
-<head>
-	<title>My Awesome Cart Payment</title>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel = "icon" href = "https://icon2.cleanpng.com/20171220/hpe/shopping-cart-png-5a3a8fce7193f6.6430523815137873424652.jpg" type = "image/x-icon">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body>
-  
- <nav class="navbar navbar-expand-lg navbar-dark bg-dark" width="100%">
-  <a class="navbar-brand" href="/shop" id="cart">&nbsp;&nbsp;My Awesome Cart</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-
-
-      <li class="nav-item active">
-        <a class="nav-link active" href="/shop">Home</a>
-      </li>
-    </div>
-
-  </nav>
+{% if status %}
+<br>
+<br>
+<br>
 <style>
 body{
   background-color:#F8F8F8;
@@ -43,7 +19,7 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top:0px;
+  margin-top:-85px;
 }
 @media screen and (min-width:900px){
 #center{
@@ -52,27 +28,17 @@ body{
   }
 }
 </style>
-
+<center>
+<img src="{% static 'shop\ezgif.com-gif-maker (2).gif' %}" alt="Nature" class="responsive" id="center"/>
+<h1>Your Payment was successful</h1>
+<h2>You have Successfully Order the Product<br>Thank You For Choosing us.....!<br> view your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></center>
+  <br>
+{% else %}
 <br>
-        {% if response.RESPCODE == '01' %}
+<br>
+<h1>Payment failed, Try again! or Contact these Number:- +91 8409913276</h1>
+<br>
+{% endif %}
 
-        <center><img src="{% static "shop\ezgif.com-gif-maker (2).gif" %}" class="responsive" id="center"></center>
+{% endblock %}
 
-        <div class="text">
-        <center><h2>You have Successfully Ordered The Product<br>₹{{response.TXNAMOUNT}} successfully Transferred</h2><h4>Thank You! For Purchasing</h4></center>
-      </div>
-
-
-
-        {% else %}
-        <center><h2>₹{{response.TXNAMOUNT}} Not Transferred of {{response.ORDERID}}</h2></center>
-
-        <center><h3>YOUR ORDER GET FAILED!<br>Try Again!</h3>
-        {% endif%}
-</body>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-
-</html>
