--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -31,7 +31,7 @@ body{
 <center>
 <img src="{% static 'shop\ezgif.com-gif-maker (2).gif' %}" alt="Nature" class="responsive" id="center"/>
 <h1>Your Payment was successful</h1>
-<h2>You have Successfully Order the Product<br>Thank You For Choosing us.....!<br> view your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></center>
+<h2>You have Successfully Order the Product<br>Thank You For Choosing us.....!<br>Track your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></center>
   <br>
 {% else %}
 <br>
