--- a/templates/shop/dashboard.html
+++ b/templates/shop/dashboard.html
@@ -89,7 +89,7 @@ body {
   <div class="column my-3">
     <img src="/media/{{product.image}}" width="100%">
     
-    <div class="card"><h5>{{product.product_name}}</h5>
+    <div class="card"><u><h6>{{product.product_name}}</h6></u>
 
 <div>
 
