--- a/templates/shop/paymentstatus.html
+++ b/templates/shop/paymentstatus.html
@@ -30,8 +30,8 @@ body{
 </style>
 <center>
 <img src="{% static 'shop\ezgif.com-gif-maker (2).gif' %}" alt="Nature" class="responsive" id="center"/>
-<h1>Your Payment was successful</h1>
-<h2>You have Successfully Order the Product<br>Thank You For Choosing us.....!<br>Track your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></center>
+<h2>Your Payment was successful</h2>
+<h3>You Have Successfully Ordered the Product<br>Thank You! We will Deliver You the product at your Home very Soon..<br>Thank You For Choosing us.....!<br>Track your Product<br><a href="/shop/vieworder"><button class="btn btn-dark">view order</button></a></h3></center>
   <br>
 {% else %}
 <br>
