--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -32,79 +32,53 @@ body{
 
 
 <section class="vh-100 gradient-custom">
-  <div class="container py-5 h-90">
+  <div class="container py-5 h-95">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
         <div class="card bg-dark text-white" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
-            <div class="mb-md-5 mt-md-4 pb-5">
-{% for message in messages %}
-<div class="alert alert-danger" role="alert">
-  {{message}}
-</div>
-{% endfor %}
-              <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Please enter your Email and password!</p>
+            <div class="mb-md-2 mt-md-7 pb-9">
 
-<form action="/shop/login/" method="post">{% csrf_token %}
+              <h2 class="fw-bold mb-2 text-uppercase">Register</h2>
+              <p class="text-white-50 mb-5">Please enter Some Details to Get Register</p>
+<form action="/shop/register/" method="post">{% csrf_token %}
               <div class="form-outline form-white mb-4">
-                <label class="form-label" for="typeEmailX">Username</label>
-                <input type="text" name="username" id="typeEmailX" class="form-control form-control-lg" />
+              	<label class="form-label" for="username">Username</label>
+                <input type="text" name="username" id="username" class="form-control form-control-lg" />
               </div>
 
               <div class="form-outline form-white mb-4">
-                <label class="form-label" for="typePasswordX">Password</label>
-                <input type="password" name="password" id="password" class="form-control form-control-lg" /><i class="fa fa-eye" id="togglePassword"style="margin-left: -30px; cursor: pointer;"> Show/hide Password</i></input>
+              	<label class="form-label" for="typePasswordX">Password</label>
+                <input type="password" name="password" id="typePasswordX" class="form-control form-control-lg" />
               </div>
 
-              <p class="small mb-2 pb-lg-2"><a class="text-white-50" href="#!">Forgot password?</a></p>
+              <div class="form-outline form-white mb-4">
+              	<label class="form-label" for="typePasswordX">Re-Enter Password</label>
+                <input type="password" name="re-password" id="typePasswordX" class="form-control form-control-lg" />
+              </div>
 
-              <button class="btn btn-outline-light btn-lg px-5" type="submit">Login</button>
 
+              <div class="form-outline form-white mb-4">
+              	<label class="form-label" for="email">Email-id</label>
+                <input type="email" name="email" id="email" class="form-control form-control-lg" />
+              </div>
+
+              <div class="form-outline form-white mb-4">
+              	<label class="form-label" for="typePasswordX">Phone Number</label>
+                <input type="number" name="phone_number" id="typePasswordX" class="form-control form-control-lg" />
+              </div>
+
+
+              <button class="btn btn-outline-light btn-lg px-5" type="submit">Register</button>
 </form>
-
-
-
-
-<script>
-const togglePassword = document.querySelector('#togglePassword');
-  const password = document.querySelector('#password');
- 
-  togglePassword.addEventListener('click', function (e) {
-    // toggle the type attribute
-    const type = password.getAttribute('type') === 'password' ? 'text' : 'password';
-    password.setAttribute('type', type);
-    // toggle the eye slash icon
-    this.classList.toggle('fa-eye-slash');
-});
-</script>
-
-<p></p>
-<p></p>
-              <u><p class="small mb-1 pb-lg-1">Or Login With</p></u>
-
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                
-                <a href="{% provider_login_url 'github' %}" class="text-white mx-1"><button class="btn btn-secondary"><i class="fa fa-github fa-lg"></i> GitHub</button></a>
-
-                <a href="{% provider_login_url 'google' method='js_sdk' %}" class="text-white"><button class="btn btn-danger"><i class="fa fa-google fa-lg"></i> Google</button></a>
-              </div>
-
             </div>
-
-            <div>
-              <p class="mt-0">Don't have an account? <a href="/shop/register" class="text-white-50 fw-bold">Sign Up</a></p>
-            </div>
-
           </div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
 
 
  <!-- Optional JavaScript -->
