--- a/templates/shop/vieworder.html
+++ b/templates/shop/vieworder.html
@@ -11,10 +11,9 @@
 
 {% for order in order %}
 <br>
-<div class="alert alert-{{alert}} alert-dismissible fade show" role="alert">
+<div class="alert alert-{{alert}} alert-dismissible fade show mx-5" role="alert">
   Your Order is <strong>{{arr}}</strong>
 </div>
-
 
 <style>
 .flex-shrink-0{
@@ -31,15 +30,13 @@ h4,h5,a{
 }
 }
 </style>
-
-<br>
 <div class="d-flex position-relative mx-1">
   <img src="/media/{{order.product_image}}" class="flex-shrink-0 me-3" alt="...">
   <div>
     <h4 class="mt-0">Product Name:-<b><u>{{order.product_name}}</u></b></h4>
-    <h5>Price:-<b><u>{{order.product_price}}</u></b></h6>
-    <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-3" >View Product</button></p></a>
-    <a href="destroy/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-3">Cancel Order</button></p></a>
+    <h4>Price:-<b><u>{{order.product_price}}</u></b></h4>
+    <a href="/shop/productview/{{order.product_id}}"><button class="btn btn-primary mx-2" >View Product</button></p></a>
+    <a href="destroy/{{order.id}}" onclick="return confirm('Are you sure you want to Cancel The Order?')"/><button class="btn btn-danger mx-2">Cancel Order</button></p></a>
   </div>
 </div>
 <br>
